--- a/mini-server/Dockerfile
+++ b/mini-server/Dockerfile
@@ -1,8 +1,7 @@
 FROM golang:1.20.4
 ENV DD_AGENT_HOST host.docker.internal 
 RUN mkdir /app
-RUN mkdir /app/logs
 ADD . /app
 WORKDIR /app
 RUN go build -o main .
-CMD ["/app/main","/app/logs/mini-server-logs.log"]
+CMD ["/app/main"]
