--- a/mini-server/task-manager.yaml
+++ b/mini-server/task-manager.yaml
@@ -3,17 +3,28 @@ kind: Pod
 metadata:
   name: task-manager-app
 spec:
+  hostPID: true
   containers:
   - name: task-manager-app
     image: my-first-docker-app:latest
     imagePullPolicy: IfNotPresent
+    
+    #- name: DD_TRACE_AGENT_URL
+    #  value: unix:///var/run/datadog/apm.socket
+    #- name: DD_DOGSTATSD_URL
+    #  value: unix:///var/run/datadog/dsd.socket
+    #- name: DD_AGENT_HOST
+    #  value: unix:///var/run/datadog
     env:
-    - name: DD_TRACE_AGENT_URL
-      value: 'unix:///var/run/datadog/apm.socket'
+    - name: DD_AGENT_HOST
+      valueFrom:
+        fieldRef:
+          fieldPath: status.hostIP
     volumeMounts:
-    - name: apmsocketpath
+    - name: dsdsocket
       mountPath: /var/run/datadog
+      readOnly: true
   volumes:
   - hostPath:
       path: /var/run/datadog/
-    name: apmsocketpath
+    name: dsdsocket
