--- a/mini-server/values.yaml
+++ b/mini-server/values.yaml
@@ -1,5 +1,10 @@
 targetSystem: "linux"
 datadog:
+  dogstatsd:
+    port: 8125
+    useHostPort: true
+    nonLocalTraffic: true
+
   site: datadoghq.com
   kubelet:
     tlsVerify: false
@@ -8,3 +13,21 @@ datadog:
   logs:
     enabled: true
     containerCollectAll: true
+agents:
+  useHostNetwork: true
+  containers:
+    agent:
+      ports:
+      - containerPort: 8125
+        hostPort: 8125
+        name: dogstatsdport
+        protocol: UDP
+#  volumeMounts:
+#  - name: dsdsocket
+#    mountPath: /var/run/datadog
+#    readOnly: true
+#  volumes:
+#  - hostPath:
+#        path: /var/run/datadog/
+#    name: dsdsocket
+
