clean up and added k8 service

--- a/mini-client/Dockerfile
+++ b/mini-client/Dockerfile
@@ -3,4 +3,4 @@ RUN mkdir /app
 ADD . /app
 WORKDIR /app
 RUN go build -o main .
-CMD ["/app/main"]
+CMD /app/main -url="http://$TASK_MANAGER_SERVICE_SERVICE_HOST:$TASK_MANAGER_SERVICE_SERVICE_PORT" -numIter=12 -numSec=150
