--- a/mini-server/task-manager.yaml
+++ b/mini-server/task-manager.yaml
@@ -2,29 +2,18 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: task-manager-app
+  labels:
+    app.kubernetes.io/name: task-proxy
 spec:
-  hostPID: true
   containers:
   - name: task-manager-app
     image: my-first-docker-app:latest
     imagePullPolicy: IfNotPresent
-    
-    #- name: DD_TRACE_AGENT_URL
-    #  value: unix:///var/run/datadog/apm.socket
-    #- name: DD_DOGSTATSD_URL
-    #  value: unix:///var/run/datadog/dsd.socket
-    #- name: DD_AGENT_HOST
-    #  value: unix:///var/run/datadog
+    ports:
+      - containerPort: 9000
+        name: task-manager-ep
     env:
     - name: DD_AGENT_HOST
       valueFrom:
         fieldRef:
           fieldPath: status.hostIP
-    volumeMounts:
-    - name: dsdsocket
-      mountPath: /var/run/datadog
-      readOnly: true
-  volumes:
-  - hostPath:
-      path: /var/run/datadog/
-    name: dsdsocket
